--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <View
+
         android:id="@+id/container_header"
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -14,6 +15,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        />
+
+
+    <ImageView
+
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:src="@drawable/bebaagua"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toTopOf="@+id/container_header"
+        app:layout_constraintStart_toStartOf="@+id/container_header"
+        />
+
+    <ImageView
+        android:id="@+id/ic_redefinir"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_refresh"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toTopOf="@+id/container_header"
+        app:layout_constraintEnd_toEndOf="@+id/container_header"/>
+
+    <EditText
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_peso"
+        android:padding="15dp"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:inputType="numberDecimal"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/container_header"
+        app:layout_constraintStart_toStartOf="parent"
+
+
         />
 
 
